# constatus

./: Makefile  README  cairo.cpp  cairo.h  cfg.h  config.h  constatus  constatus-ext-filter.conf  constatus-filter-plugin.conf  constatus-jpeg.conf  constatus-mjpeg.conf  constatus-rtp.conf  constatus-rtsp.conf  constatus-v4l-extpipe.conf  constatus-v4l-ffmpeg.conf  constatus-v4l-loopback.conf  constatus-v4l.conf  constatus.cfg  error.cpp  error.h  exec.cpp  exec.h  filter.cpp  filter.h  filter_add_scaled_text.cpp  filter_add_scaled_text.h  filter_add_text.cpp  filter_add_text.h  filter_apply_mask.cpp  filter_apply_mask.h  filter_boost_contrast.cpp  filter_boost_contrast.h  filter_ext.cpp  filter_ext.h  filter_grayscale.cpp  filter_grayscale.h  filter_marker_simple.cpp  filter_marker_simple.h  filter_mirror_h.cpp  filter_mirror_h.h  (+75 more)
debian/: changelog  control  copyright  files
ext-filters/: Makefile  README  demo.c  demo2.cpp  demoocv.cpp  template.c
ext-motiontrig/: Makefile  demo.cpp
filter-plugins/: Makefile  README  demo.c  demo.so.0.1  demo2.cpp  demo2.so.0.1  demoocv.cpp  demoocv.so.0.1  template.c
man/: constatus.1
meta-plugins/: Makefile  gps.cpp
motiontrigger-plugins/: Makefile  README  demo.cpp  demoocv.cpp  demoocv2.cpp
source-plugins/: README  demo.c  demo.cpp  demo.so.0.1  vnc.cpp
